<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password_dt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    android:orientation="vertical"
    tools:context=".Login"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/butler_regular"
        android:text="Login"
        android:textSize="60sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:text="Ingresa email y contraseña"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/coreo_regis"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edittext_custom"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="15sp" />/>

    <EditText
        android:id="@+id/pass_regis"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edittext_custom"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/btn_color"
            android:text="Iniciar Sesion"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_go_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Registrarse" />

        <TextView
            android:id="@+id/GoRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Olvide mi contraseña" />

        <TextView
            android:id="@+id/ErrorCampos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/butler_regular"
            android:text="Los campos estan vacios"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/ErrorAlIniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/butler_regular"
            android:text="No coincide"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>


</LinearLayout>