<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#202732"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:fontFamily="@font/butler_regular"
        android:textSize="60sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresa credenciales para registrarte"
        android:textSize="20sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/Name_Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edittext_custom"
        android:hint="Nombre y Apellido"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="15sp" />/>

    <EditText
        android:id="@+id/Email_Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edittext_custom"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="15sp" />/>

    <EditText
        android:id="@+id/Password_Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edittext_custom"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#0E0E0E"
        android:textColorHint="#000000"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/Confir_Password_Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/edittext_custom"
        android:hint="Repite Contraseña"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#050505"
        android:textColorHint="#000000"
        android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/Registrarsebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="@color/btn_color"
            android:text="Registrarse"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volver al Login"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/butler_regular"
        android:text="Algo salió mal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/ErrorBlanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/butler_regular"
        android:text="Hay campos vacios"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="visible" />


</LinearLayout>